<resources>
    <string name="app_name">Meal Planner</string>
    <string name="don_t_have_an_account_sign_up">Don’t have an account? Sign up</string>
    <string name="email">Email</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_password2">Enter Password</string>
    <string name="password">Password</string>
    <string name="forgot_password">forgot password ?</string>
    <string name="don_t_have_an_account">don_t_have_an_account</string>
    <string name="sign_up">Sign up</string>
    <string name="don_t_have_an_account2">Don_t_have_an_account ?</string>
    <string name="sign_in">Sign in</string>
    <string name="don_t_have_an_account3">Don’t have an account?</string>
    <string name="hello_nwelcome_back">Hello,\nWelcome Back!</string>
    <string name="create_an_account">Create an account</string>
    <string name="enter_name">Enter Name</string>
    <string name="aleardy_a_member">Aleardy a member ?</string>
    <string name="sign_in2">Sign in</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="retype_password">Retype Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="what_are_you_cooking_today">What are you cooking today?</string>
    <string name="hello_jega">Hello Jega</string>
    <string name="meal_of_the_day">Meal of the Day</string>
    <string name="categories">Categories</string>
    <string name="popular_cuisines">Popular Cuisines</string>
    <string name="this_week_s_plan">This Week\'s Plan</string>
    <string name="search_recipe">Search recipe</string>
    <string name="default_web_client_id">1071438711626-kana2f1s5mt132kr4mt66t1thrjoh4f0.apps.googleusercontent.com</string>
    <string name="search">Search</string>
    <string name="category">Category</string>
    <string name="ingredient">Ingredient</string>
    <string name="country">Country</string>
    <string name="hello">Hello</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="search2">Search</string>
    <string name="guest_mode">Guest Mode</string>
    <string name="skip_for_now">Skip for now</string>
    <string name="skip">Skip</string>
    <string name="remove_from_favourite">Remove From Favourite</string>
    <string name="your_week_plan">Your Week Plan:</string>
    <string name="add_to_calendar">Add to calendar</string>
    <string name="your_daily_planner">Your Daily Planner</string>
    <string name="popular_ingredients">Popular Ingredients</string>
    <string name="remove_favorite">Remove Favorite</string>
    <string name="favorites">Favorites</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="retry_to_connect">Retry to connect</string>
    <string name="add_meal">Add Meal</string>
    <string name="guest_mode2">Guest Mode</string>
</resources>