<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".auth.login.LoginActivity">


    <EditText
        android:id="@+id/etName"
        android:layout_width="355dp"
        android:layout_height="55dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:hint="@string/enter_name"

        android:inputType="text"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="55dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/create_an_account"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="355dp"
        android:layout_height="55dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"

        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etName" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignup"
        android:layout_width="355dp"
        android:layout_height="60dp"

        android:layout_marginStart="30dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/buttons_drawable"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etConfirmPswd" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="2dp"
        android:text="@string/password"
        app:layout_constraintBottom_toTopOf="@+id/etPswd"
        app:layout_constraintStart_toStartOf="@+id/etPswd" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="112dp"
        android:layout_marginTop="16dp"
        android:text="@string/aleardy_a_member"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardGoogle" />

    <TextView
        android:id="@+id/txtSignin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/sign_in2"
        android:textColor="#FF9C00"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.027"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/cardGoogle" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cardGoogle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgGoogle"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="8dp"
            app:srcCompat="@drawable/google" />
    </androidx.cardview.widget.CardView>

    <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="?android:attr/listDivider"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignup" />

    <EditText
        android:id="@+id/etPswd"
        android:layout_width="355dp"
        android:layout_height="55dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:hint="@string/enter_password2"
        android:inputType="textPassword"

        android:padding="10dp"
        android:password="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmail" />

    <EditText
        android:id="@+id/etConfirmPswd"
        android:layout_width="355dp"
        android:layout_height="55dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:hint="@string/retype_password"
        android:inputType="textPassword"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/btnSignup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPswd" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="2dp"
        android:text="@string/name"
        app:layout_constraintBottom_toTopOf="@+id/etName"
        app:layout_constraintStart_toStartOf="@+id/etName" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="2dp"
        android:text="@string/email"
        app:layout_constraintBottom_toTopOf="@+id/etEmail"
        app:layout_constraintStart_toStartOf="@+id/etEmail" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="2dp"
        android:text="@string/confirm_password"
        app:layout_constraintBottom_toTopOf="@+id/etConfirmPswd"
        app:layout_constraintStart_toStartOf="@+id/etConfirmPswd" />


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:indeterminateTint="@color/green"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>