<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="55dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/hello_nwelcome_back"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="355dp"
        android:layout_height="55dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:hint="@string/enter_email"
        android:inputType="text"

        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignup"
        android:layout_width="355dp"
        android:layout_height="60dp"
        android:layout_marginTop="55dp"
        android:layout_marginBottom="28dp"

        android:background="@drawable/buttons_drawable"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPswd" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="2dp"
        android:text="@string/email"
        app:layout_constraintBottom_toTopOf="@+id/etEmail"
        app:layout_constraintStart_toStartOf="@+id/etEmail" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="2dp"
        android:text="@string/password"
        app:layout_constraintBottom_toTopOf="@+id/etPswd"
        app:layout_constraintStart_toStartOf="@+id/etPswd" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="107dp"
        android:layout_marginTop="28dp"
        android:text="@string/don_t_have_an_account3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgFacebook" />

    <TextView
        android:id="@+id/txtSignin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:clickable="true"
        android:contextClickable="true"
        android:focusable="true"
        android:text="@string/sign_up"
        android:textColor="#FF9C00"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.067"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/imgFacebook" />

    <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="29dp"
        android:background="?android:attr/listDivider"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignup" />

    <EditText
        android:id="@+id/etPswd"
        android:layout_width="355dp"
        android:layout_height="55dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:hint="@string/enter_password2"
        android:inputType="textPassword"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmail" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgGoogle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="39dp"

        android:layout_marginEnd="107dp"
        android:background="@drawable/shadowicons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imgFacebook"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:srcCompat="@drawable/google" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgFacebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="107dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/shadowicons"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toStartOf="@+id/imgGoogle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:srcCompat="@drawable/facebook" />

</androidx.constraintlayout.widget.ConstraintLayout>