<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <!-- Search Bar -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/searchCard"
        android:layout_width="370dp"
        android:layout_height="52dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="25dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="12dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_search"
                app:tint="@color/gray" />

            <EditText
                android:id="@+id/etSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="@null"
                android:hint="@string/search"
                android:textSize="16sp" />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <!-- Filter Chips -->
    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchCard"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chipCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipIngredient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ingredient" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country" />

    </com.google.android.material.chip.ChipGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvAreas"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:clipToPadding="false"
        android:paddingHorizontal="8dp"
        android:visibility="visible"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chipGroup"
        app:layout_constraintVertical_bias="0.5"
        app:spanCount="2"
        tools:listitem="@layout/item_area"
        tools:visibility="visible" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCategories"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:clipToPadding="false"
        android:paddingHorizontal="8dp"
        android:visibility="visible"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chipGroup"
        app:layout_constraintVertical_bias="0.5"
        app:spanCount="2"
        tools:listitem="@layout/item_category"
        tools:visibility="invisible" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvIngredients"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:clipToPadding="false"
        android:paddingHorizontal="8dp"
        android:visibility="invisible"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chipGroup"
        app:layout_constraintVertical_bias="0.5"
        app:spanCount="2"
        tools:listitem="@layout/item_category"
        tools:visibility="invisible" />

</androidx.constraintlayout.widget.ConstraintLayout>